@@ -35,6 +35,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 8594: ftplib now provides a source_address parameter to specify which
+  (address, port) to bind to before connecting.
+
 - Issue #11326: Add the missing connect_ex() implementation for SSL sockets,
   and make it work for non-blocking connects.
 
